[BACKEND]
[Branch: develop] Fix showUsers GET method.